<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/common_ui_padding">

        <TextView
            android:id="@+id/tvTotalPriceLabel"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_ui_padding"
            android:text="@string/text_cart_total" />

        <TextView
            android:id="@+id/tvOrderPrice"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_ui_padding_extra_small"
            android:textColor="@color/colorAccent"
            tools:text="$20" />

        <TextView
            android:id="@+id/tvNameLabel"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_name" />

        <TextView
            android:id="@+id/tvName"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_ui_padding_extra_small"
            app:layout_constraintStart_toStartOf="@+id/tvNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvNameLabel"
            tools:text="Mohammed Abo Obaidah " />

        <TextView
            android:id="@+id/tvEmailLabel"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_ui_padding"
            android:text="@string/text_email" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_ui_padding_extra_small"
            tools:text="mohammd@gmail.com " />

        <TextView
            android:id="@+id/tvCardInfo"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_ui_padding"
            android:text="@string/text_card_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_ui_padding_extra_small"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="123456789123" />

            <TextView
                android:id="@+id/tvCardLast4"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                tools:text="1222," />

            <TextView
                android:id="@+id/tvCardType"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_ui_padding_small"
                tools:text="Visa" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvEnterAddress"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_enter_address" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address" />
    </LinearLayout>

    <Button
        android:id="@+id/btnPayNow"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_ui_padding"
        android:background="@color/colorAccent"
        android:text="@string/text_pay" />
</LinearLayout>